# currio

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
currio/: README.md  __init__.py  compiled.py  diamond.py  io.py  neuron.py  plot.py  sensor.py  simulation.py  utils.py
currio/test/: test_compiled.py
currio/tests/: conftest.py  test_compiled.py  test_multipole.py  test_sensor_units.py
documentation/: README.md
documentation/tutorials/: neuron-tutorial-notes.org  neuron-tutorial.py  simple-model-tutorial-export.hoc  simple-model-tutorial.hoc  simple-tutorial.ses  spike-demo.py
models/144976/: 10sim.ses  extract-3d-neuron.ipynb  main.ipynb  membrane_potential.hoc  membrane_potential_formatted.hoc
models/144976/arm64/: distr.c  h.c  kadist.c  (+8 more)
models/2014822/: synapse.ipynb
models/266775/: synapse.ipynb
models/55035/: extract-3d-neuron.ipynb  extract-3d-neuron.py  fig2A.hoc  generate_paraview_animation.py  mag_field_lines.pvsm  main.ipynb  make_fields.py  paraview_sim.pvsm  segment_vector.html
models/Five-neuron-neocortex/: README.html  extract-3d-neuron.ipynb
models/MiglioreMcTavish2013/: forfig1-springer.hoc  forfig2-springer.hoc  forfig2.ses  forfig3-springer.hoc  gc-ka.hoc  mitral-lss.hoc  mosinit.hoc  readme.html
models/OBGAMMA/: Background.hoc  Cal_Synch.hoc  Connect.hoc  Figure.hoc  GC_Stim.hoc  Input.hoc  KS.mod  MC_Stim.hoc  MC_def.hoc  MC_save.hoc  OBNet.hoc  PG_Stim.hoc  PG_def.hoc  Parameter.hoc  README  SineInput.mod  cadecay.mod  cadecay2.mod
models/Schizophr/: Gfluct.mod  average.hoc  condu.txt  mosinit.hoc  readme.txt  sim_9068802-test.hoc
models/alzheimer/: geo5038804.hoc  kadist.mod  membrane_potential.hoc  mosinit.hoc  readme.html
models/gap-modeldb/: correl.hoc  forfig6-modeldb.hoc  mitral-modeldb.hoc  mosinit.hoc  readme.txt
models/magical7/: 2ap-distr-c62564AP.hoc  geoc62564.hoc  mosinit.hoc  readme.txt  sinapsi_weights.txt
notebooks/: Current_Distribution_Reconstruction.ipynb  Know Your Numbers.ipynb  Multipole.ipynb  Number of channels.ipynb
results/: 001-b0c-55035-20250208-163727.txt  b0c.vtk
(+263 files in other folders)
