[metadata]
name = currio
version = 0.0.3
author = Mykhailo Flaks
author_email = mykhailo.flaks@gmail.com
description = Import neuron models and run simulations to extract magnetic fields and currents
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    setuptools>=58.2.0
    wheel

[options.packages.find]
exclude =
    tests
    logs
